<resources>
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>
    <string name="splash_ootd_diary">ootd calendar</string>
    <string name="splash_collection">collection</string>
    <string name="action_today">오늘</string>
    <string name="action_cancel">취소</string>
    <string name="action_select">확인</string>
    <string name="prime_date_picker_selected_day">이미 선택한 날짜입니다!</string>
    <string name="prime_date_picker_from">From</string>
    <string name="prime_date_picker_to">To</string>
    <string name="no_range_is_selected">날짜를 선택해 주세요!</string>
    <string name="no_day_is_selected">No day is selected!</string>
    <string name="menu_month">월별</string>
    <string name="menu_week">주별</string>
    <string name="menu_matching">매칭</string>
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>
    <string name="login">로그인</string>
    <string name="login_first_title">나만을 위한</string>
    <string name="login_second_title">OOTD 캘린더</string>
    <string name="login_third_title">콜렉션은 나만의 OOTD를 작성기록 앱입니다.</string>
    <string name="login_welcome_first_title">언제나</string>
    <string name="login_welcome_second_title">반가워요 8:-)</string>
    <string name="login_id_hint">아이디를 입력해 주세요.</string>
    <string name="login_pw_hint">비밀번호를 입력해 주세요.</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>
    <string name="signup">회원가입</string>
    <string name="signup_id_hint">아이디(이메일)</string>
    <string name="signup_email_hint">직접입력</string>
    <string name="signup_email_delimiter">\@</string>
    <string name="signup_name_hint">이름</string>
    <string name="signup_password_hint">비밀번호</string>
    <string name="signup_password_confirm_hint">비밀번호 확인</string>
    <string name="weather">Weather.</string>
    <string name="plcae">Place.</string>
    <string name="who">Who.</string>
    <string name="top">Top.</string>
    <string name="bottom">Bottom.</string>
    <string name="shoes">Shoes.</string>
    <string name="etc">Etc.</string>
    <string name="weekly_default">해당 항목 없음</string>
    <string name="team_name">8:-)</string>
    <string name="leader_role">PROJECT\nMANAGER</string>
    <string name="leader_name">이프</string>
    <string name="design_role">UI/UX\nDESIGNER</string>
    <string name="design_name">니제이</string>
    <string name="android_role">ANDROID</string>
    <string name="android_name1">테오</string>
    <string name="android_name2">라프</string>
    <string name="server_role">SERVER</string>
    <string name="server_name1">써니</string>
    <string name="server_name2">녜</string>
    <string name="setting_back">설정</string>
    <string name="id">collection</string>
    <string name="id_title">아이디</string>
    <string name="nickname_title">이름</string>
    <string name="phone_title">휴대폰</string>
    <string name="secret_number_title">인증번호</string>
    <string name="secret_number_annotation">인증번호를 입력해 주세요</string>
    <string name="nickname">콜렉션짱짱</string>
    <string name="nickname_support">님</string>
    <string name="nickname_edit">닉네임 변경</string>
    <string name="nickname_edit_title">닉네임을 변경하세요</string>
    <string name="phone_number_edit_title">휴대폰번호를 변경하세요</string>
    <string name="pw_edit_title">비밀번호를 변경하세요</string>
    <string name="pw_find_title">비밀번호를 변경해 주세요</string>
    <string name="id_find_title">아래 정보를 입력해 주세요.</string>
    <string name="id_find_second_title">아이디를 확인하세요</string>
    <string name="nickname_annotation_1">실명을 입력하세요.</string>
    <string name="phone_number_annotation">\'-\'를 제외하고 입력해 주세요.</string>
    <string name="info_edit">회원정보 수정</string>
    <string name="phone_number_edit">휴대폰번호 변경</string>
    <string name="pw_length_check">6~15자리를 입력해 주세요.</string>
    <string name="pw_finde">비밀번호를 변경하세요</string>
    <string name="pw_origin">기존 비밀번호</string>
    <string name="pw_new">새 비밀번호</string>
    <string name="pw_new_check">새 비밀번호 확인</string>
    <string name="pw_edit">비밀번호 변경</string>
    <string name="pw_find">비밀번호 찾기</string>
    <string name="id_find">아이디 찾기</string>
    <string name="delete_account">회원탈퇴</string>
    <string name="developer_info">개발자 정보</string>
    <string name="privacy_rule">개인정보 취급방침</string>
    <string name="mail">문의하기</string>
    <string name="logout">로그아웃</string>
    <string name="app_version">v.1.0.5</string>
    <string name="nickname_annotation">콜렉션에서 사용할 닉네임을 입력해 주세요.</string>
    <string name="mybest">MY BEST</string>
    <string name="lookbook">LOOK BOOK</string>
    <string name="match_weather">Weather</string>
    <string name="match_place">PLACE</string>
    <string name="match_color">COLOR</string>
    <string name="match_who">WHO</string>
    <string name="match_search_title">검색결과</string>
    <string name="match_search_result_sub">건</string>
    <string name="match_search_date_find">날짜조회</string>
    <string name="match_search_recent">최신순</string>
    <string name="match_weather_search_view">원하는 날씨태그를 검색하세요.(*최대2개)</string>
    <string name="match_place_search_view">원하는 장소태그를 검색하세요.(*최대2개)</string>
    <string name="match_color_search_view">원하는 컬러태그를 검색하세요.</string>
    <string name="match_who_search_view">함께한 사람을 검색해보세요.(*최대2개)</string>
    <string name="match_weather_search">원하는 날씨태그를 검색하세요!</string>
    <string name="match_place_search">원하는 위치 태그를 검색하세요!</string>
    <string name="match_who_search">원하는 인물 태그를 검색하세요!</string>
    <string name="match_weather_last">최근 검색한 날씨</string>
    <string name="match_place_last">최근 검색한 장소</string>
    <string name="match_color_last">최근 검색한 컬러</string>
    <string name="match_who_last">최근 검색한 태그</string>
    <string name="match_all_delete">모두삭제</string>
    <string name="match_weather_default">기본 날씨</string>
    <string name="match_place_default">기본 장소</string>
    <string name="match_color_default">기본 컬러</string>
    <string name="match_who_default">기본 태그</string>
    <string name="match_search_result_first">검색 결과</string>
    <string name="match_search_result_second">0</string>
    <string name="match_search_result_third">건</string>
    <string name="dialog_text">로그아웃 하시겠습니까?</string>
    <string name="dialog_pw_change_text">비밀번호가 변경되었습니다.</string>
    <string name="dialog_keyword_no_find_text">검색결과를 찾을 수 없습니다.</string>
    <string name="dialog_text1">해당 날짜의 OOTD</string>
    <string name="dialog_text2">검색 결과를 찾을 수 없습니다.</string>
    <string name="lookpoint_error">해당 룩 포인트의 OOTD가 존재하지 않습니다.</string>
    <string name="lookpoint_error1">해당 룩 포인트의</string>
    <string name="lookpoint_error2">OOTD가 존재하지 않습니다.</string>
    <string name="dialog_text3">수정하기</string>
    <string name="dialog_text4">삭제하기</string>
    <string name="privacy_first_title">*&lt; COLLECTION &gt;(‘www.collection-ootd.shop’이하 ‘COLLECTION’)*은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.\n○ 이 개인정보처리방침은 2022년 2월 12일부터 적용됩니다.</string>
    <string name="privacy_first_text">제1조(개인정보의 처리 목적)</string>
    <string name="privacy_first_1_text">&lt; COLLECTION &gt;(‘www.collection-ootd.shop’이하 ‘COLLECTION’)*은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</string>
    <string name="privacy_first_2_text">1. 홈페이지 회원가입 및 관리\n회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지, 각종 고지·통지 목적으로 개인정보를 처리합니다.\n\n2. 민원사무 처리\n민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락·통지, 처리결과 통보 목적으로 개인정보를 처리합니다.\n\n3. 재화 또는 서비스 제공\n서비스 제공, 맞춤서비스 제공을 목적으로 개인정보를 처리합니다.\n\n4. 마케팅 및 광고에의 활용\n신규 서비스(제품) 개발 및 맞춤 서비스 제공, 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.\n</string>
    <string name="privacy_second_text">제2조(개인정보의 처리 및 보유 기간)</string>
    <string name="privacy_second_1_text">① &lt; COLLECTION &gt;은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.\n\n② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.</string>
    <string name="privacy_second_2_text">1.&lt;홈페이지 회원가입 및 관리&gt;\n&lt;홈페이지 회원가입 및 관리&gt;와 관련한 개인정보는 수집.이용에 관한 동의일로부터&lt;3년&gt;까지 위 이용목적을 위하여 보유.이용됩니다.\n\n보유근거 :\n 회원 가입의사 확인, 회원자격 유지및 관리, 서비스 부정이용 방지, 각종 고지및 통지 목적으로 개인정보를 처리합니다.\n\n관련법령 :\n1)신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년\n2)표시/광고에 관한 기록 : 6개월\n\n2.&lt;민원사무 처리&gt;\n&lt;민원사무 처리&gt;와 관련한 개인정보는 수집.이용에 관한 동의일로부터&lt;3년&gt;까지 위 이용목적을 위하여 보유.이용됩니다.\n\n보유근거 :\n 민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락·통지, 처리결과 통보 목적으로 개인정보를 처리합니다.\n\n관련법령 :\n1)신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년\n2)소비자의 불만 또는 분쟁처리에 관한 기록 : 3년\n\n3.&lt;재화 또는 서비스 제공&gt;\n&lt;재화 또는 서비스 제공&gt;와 관련한 개인정보는 수집.이용에 관한 동의일로부터&lt;3년&gt;까지 위 이용목적을 위하여 보유.이용됩니다.\n\n보유근거 :\n 서비스 제공, 맞춤서비스 제공을 목적으로 개인정보를 처리합니다.\n\n관련법령 :\n 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년\n\n4.&lt;마케팅 및 광고에의 활용&gt;\n&lt;마케팅 및 광고에의 활용&gt;와 관련한 개인정보는 수집.이용에 관한 동의일로부터&lt;3년&gt;까지 위 이용목적을 위하여 보유.이용됩니다.\n\n보유근거 :\n 신규 서비스(제품) 개발 및 맞춤 서비스 제공, 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.\n\n관련법령 :\n1)신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년\n2)소비자의 불만 또는 분쟁처리에 관한 기록 : 3년\n3)대금결제 및 재화 등의 공급에 관한 기록 : 5년</string>
    <string name="privacy_third_text">제3조(정보주체와 법정대리인의 권리·의무 및 그 행사방법)</string>
    <string name="privacy_third_1_text">① 정보주체는 COLLECTION에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.\n\n② 제1항에 따른 권리 행사는COLLECTION에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 COLLECTION은(는) 이에 대해 지체 없이 조치하겠습니다.\n\n③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.\n\n④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.\n\n⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.\n\n⑥ COLLECTION은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.</string>
    <string name="privacy_fourth_text">제4조(처리하는 개인정보의 항목 작성)</string>
    <string name="privacy_fourth_1_text">&lt; COLLECTION &gt;은(는) 다음의 개인정보 항목을 처리하고 있습니다.</string>
    <string name="privacy_fourth_2_text">1.&lt; 홈페이지 회원가입 및 관리 &gt;\n필수항목 : 휴대전화번호, 비밀번호, 로그인ID, 이름, 서비스 이용 기록, 접속 로그, 쿠키, 닉네임\n\n2.&lt; 민원사무 처리 &gt;\n필수항목 : 이메일, 로그인ID, 서비스 이용 기록, 접속 로그, 쿠키\n\n3.&lt; 재화 또는 서비스 제공 &gt;\n필수항목 : 성별, 생년월일, 신체정보, 서비스 이용 기록, 접속 로그, 쿠키, 닉네임\n\n4.&lt; 마케팅 및 광고에의 활용 &gt;\n필수항목 : 성별, 생년월일, 서비스 이용 기록, 접속 로그, 쿠키</string>
    <string name="privacy_five_text">제5조(개인정보의 파기)</string>
    <string name="privacy_five_1_text">① &lt; COLLECTION &gt; 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.\n\n② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.1. 법령 근거 :2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜\n\n③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.</string>
    <string name="privacy_five_2_text">1. 파기절차\n&lt; COLLECTION &gt; 은(는) 파기 사유가 발생한 개인정보를 선정하고, &lt; COLLECTION &gt; 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.\n\n2. 파기방법\n전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다</string>
    <string name="privacy_six_text">제6조(개인정보의 안전성 확보 조치)</string>
    <string name="privacy_six_1_text">&lt; COLLECTION &gt;은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.</string>
    <string name="privacy_six_2_text">1. 정기적인 자체 감사 실시\n개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.\n\n2. 개인정보에 대한 접근 제한\n개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.\n\n3. 개인정보의 암호화\n이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.</string>
    <string name="privacy_seven_text">제7조(개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항)</string>
    <string name="privacy_seven_1_text">① COLLECTION 은(는) 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다.\n\n② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다.\n\n가. 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.\n\n나. 쿠키의 설치•운영 및 거부 : 웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다.\n\n다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.</string>
</resources>