<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_weekly"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/splash_logo_iv"
        android:layout_width="212dp"
        android:layout_height="86dp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="-100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/img_app_logo"/>

    <TextView
        android:id="@+id/splash_ootdDiary_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vlan_llaoutline"
        android:textStyle="normal"
        android:textSize="7sp"
        android:textColor="@color/terracota"
        android:letterSpacing="-0.1"
        android:lineSpacingExtra="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_logo_iv"
        android:text="@string/splash_ootd_diary"/>

    <TextView
        android:id="@+id/splash_collection_tv"
        style="@style/VlanLlaRegular10Pt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_ootdDiary_tv"
        android:text="@string/splash_collection" />
</androidx.constraintlayout.widget.ConstraintLayout>