<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_matchpage">

    <ImageView
        android:id="@+id/info_edit_back_btn_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/info_edit_back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_edit"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:textStyle="normal"
        android:textColor="@color/dark_taupe"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/info_edit_back_btn_iv"
        app:layout_constraintTop_toTopOf="@id/info_edit_back_btn_iv"
        app:layout_constraintBottom_toBottomOf="@id/info_edit_back_btn_iv"
        android:letterSpacing="-0.01"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/info_edit_nickname_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname_title"
        android:fontFamily="@font/noto_sans_kr"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textColor="@color/dark_taupe"
        android:letterSpacing="-0.01"
        app:layout_constraintStart_toEndOf="@id/info_edit_back_btn_iv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_back_tv"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/info_edit_nickname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:fontFamily="@font/noto_sans_kr"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="-20dp"
        android:textColor="@color/terracota"
        android:letterSpacing="-0.01"
        app:layout_constraintStart_toStartOf="@id/info_edit_nickname_title_tv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_nickname_title_tv" />

    <TextView
        android:id="@+id/info_edit_id_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_title"
        android:fontFamily="@font/noto_sans_kr"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textColor="@color/dark_taupe"
        android:letterSpacing="-0.01"
        app:layout_constraintStart_toStartOf="@id/info_edit_nickname_title_tv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_nickname_tv" />

    <TextView
        android:id="@+id/info_edit_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/terracota"
        android:letterSpacing="-0.01"
        app:layout_constraintStart_toStartOf="@id/info_edit_nickname_title_tv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_id_title_tv" />

    <View
        android:id="@+id/info_edit_vertical2_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/info_edit_id_tv"
        app:layout_constraintBottom_toTopOf="@+id/info_edit_vertical_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/pinkish_grey"/>
    <View
        android:id="@+id/info_edit_vertical_view"
        android:layout_width="0dp"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@+id/info_edit_vertical2_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/item_top_line"/>

    <LinearLayout
        android:id="@+id/info_edit_nickname_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/info_edit_id_tv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_vertical_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_edit_nickname_edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname_edit"
            android:fontFamily="@font/noto_sans_kr"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/dark_taupe"
            android:letterSpacing="-0.01" />

        <ImageView
            android:id="@+id/info_edit_nickname_ib"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="32dp"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_edit_phone_number_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/info_edit_id_tv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_nickname_ly"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_edit_phone_number_edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_edit"
            android:fontFamily="@font/noto_sans_kr"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/dark_taupe"
            android:letterSpacing="-0.01" />

        <ImageView
            android:id="@+id/info_edit_phone_number_btn_ib"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="32dp"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_edit_pw_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/info_edit_id_tv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_phone_number_ly"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_edit_pw_edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw_edit"
            android:fontFamily="@font/noto_sans_kr"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/dark_taupe"
            android:letterSpacing="-0.01" />

        <ImageView
            android:id="@+id/info_edit_pw_edit_ib"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="32dp"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_edit_account_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/info_edit_id_tv"
        app:layout_constraintTop_toBottomOf="@id/info_edit_pw_ly"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_edit_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:fontFamily="@font/noto_sans_kr"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/dark_taupe"
            android:letterSpacing="-0.01" />

        <ImageView
            android:id="@+id/info_edit_account_ib"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back2"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="32dp"
            android:gravity="end"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>