<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_matchpage">

    <TextView
        android:id="@+id/login_first_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_light"
        android:textStyle="normal"
        android:textSize="32sp"
        android:textColor="@color/terracota"
        android:layout_marginTop="-250dp"
        android:layout_marginStart="60dp"
        android:letterSpacing="-0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login_first_title" />

    <TextView
        android:id="@+id/login_second_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:textStyle="normal"
        android:textSize="32sp"
        android:textColor="@color/terracota"
        android:letterSpacing="-0.01"
        app:layout_constraintStart_toStartOf="@id/login_first_title_tv"
        app:layout_constraintTop_toBottomOf="@id/login_first_title_tv"
        android:text="@string/login_second_title" />

    <TextView
        android:id="@+id/login_third_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/dark_taupe"
        android:letterSpacing="-0.01"
        android:layout_marginTop="-30dp"
        app:layout_constraintStart_toStartOf="@id/login_first_title_tv"
        app:layout_constraintTop_toBottomOf="@id/login_second_title_tv"
        android:text="@string/login_third_title" />

    <ImageButton
        android:id="@+id/login_login_btn_off_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_btn_event"
        android:layout_marginTop="126dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_signup_btn_iv"
        app:layout_constraintTop_toBottomOf="@id/login_third_title_tv"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/login_signup_btn_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signup_btn_event"
        android:layout_marginTop="11dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_login_btn_off_iv"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>